# moos-ivp-umassd

./: .gitignore
missions/dynamicRIDMission/: last.moos
missions/dynamicRIDMission/plugs/: app_pMoosDynamicRID.plug
missions/testMission/: .LastOpenedMOOSLogDirectory  current.bhv  last.moos  temp.moos
missions/testMission/plugs/: app_pMoosTestApp.plug
src/: CMakeLists.txt
src/pMoosCoordinateConsumer/: CMakeLists.txt  CoordinateConsumer.cpp  CoordinateConsumer.h  CoordinateConsumerMain.cpp  pMoosCoordinateConsumer.moos
src/pMoosCoordinateConversion/: CMakeLists.txt  CoordinateConversion.cpp  CoordinateConversion.h  CoordinateConversionMain.cpp  pMoosCoordinateConversion.moos
src/pMoosDynamicRID/: CMakeLists.txt  DynamicRID.cpp  DynamicRID.h  DynamicRIDMain.cpp  pMoosDynamicRID.moos
src/pMoosTestApp/: CMakeLists.txt  MoosTestApp.cpp  MoosTestApp.h  MoosTestAppMain.cpp  pMoosTestApp.moos
